Se sube avance de maqueta

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,1 +1,1 @@
-body{background-color:#25b79f;color:#fff;font-weight:400;width:100%;height:100%}
+body{background-color:#25b79f;color:#fff;font-family:"Comfortaa", Helvetica, Arial, sans-serif;font-weight:400;width:100%;height:100%}
