--- a/gulp/css/global.scss
+++ b/gulp/css/global.scss
@@ -1,6 +1,7 @@
 body {
   background-color: $verde;
   color: $blanco;
+  font-family: "Comfortaa", Helvetica, Arial, sans-serif;
   font-weight: 400;
   width: 100%;
   height: 100%;
