Se suben estilos de header

--- a/gulp/css/colors.scss
+++ b/gulp/css/colors.scss
@@ -4,3 +4,8 @@ $blanco:#ffffff;
 $negro:#000000;
 
 $verde: #25b79f;
+$blueClassic: #0F4C81;
+$provence: #658DC6;
+$babyAzul: #B5C7D3;
+$monument: #84898C;
+
