--- a/gulp/css/index.scss
+++ b/gulp/css/index.scss
@@ -1,9 +1,9 @@
 /**
  * Importación de archivos (en orden de uso).
  */
- @import 'mixins',
- 'colors',
- 'global',
- 'home'
+    @import 'mixins',
+    'colors',
+    'global',
+    'home';
 
 
