--- a/gulp/css/global.scss
+++ b/gulp/css/global.scss
@@ -1,9 +1,40 @@
 body {
-  background-color: $verde;
+  background-color: $blueClassic;
   color: $blanco;
   font-family: "Comfortaa", Helvetica, Arial, sans-serif;
   font-weight: 400;
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+img{
+  width: 100%;
+}
+
+.cover{
+  height: 100vh;
+  min-height: 700px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: $blanco; 
+}
+
+p {
+  font-family: "Quattrocento", sans-serif;
+  color: $blanco; 
+}
+
+.btn:focus,
+a:focus {
+  outline: none !important; 
+}
